resources/00-cert-manager-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-operator 
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
