resources/04c-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: cp4i
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
