resources/03b-qmgr-tls-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qmgr-demo-tls-route
  namespace: tools
spec:
  host: extapp2e-to2e-mq.chl.mq.ibm.com
  to:
    kind: Service
    name: qmgr-demo-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
